# ICL-BRAINTEASER

./: .gitignore  .pre-commit-config.yaml  README.md  TODOS.md  backup-results.sh  pyproject.toml  requirements.txt
csvs/: baseline-vs-optimized-few-shot-diffs.csv  baseline-vs-optimized-zero-shot-diffs.csv  baseline-zero-shot-vs-baseline-few-shot-diffs.csv  eval.ods  final_eval.ods  full-zero-shot-vs-full-few-shot-raw.csv  optimized-zero-shot-vs-baseline-zero-shot-diffs.csv  optimized-zero-shot-vs-optimized-few-shot-diffs.csv
notebooks/: 0_model_stability_test.ipynb  1_zero_shot_obtain_best_system_prompt.ipynb  1_zero_shot_system_prompt.ipynb  2_zero_shot_prompt.ipynb  3_1_few_shot_system_obtain_best_n.ipynb  3_2_few_shot_system_obtain_best_n.ipynb  3_few_shot_system_obtain_best_n.ipynb  4_few_shot_prompt.ipynb  5_evaluation.ipynb  6_model_interferenc_speed.ipynb  eval.ipynb  explore_dataset.ipynb  explore_models.ipynb  explore_ollama.ipynb  test_0_explore_system_prime_messages.ipynb  test_1_few_shot_prompt.ipynb  test_1_naive_prompt.ipynb
notebooks/exploration/: explore_models.ipynb  explore_models_async.ipynb  explore_models_ext.ipynb
notebooks/old/: eval.ipynb  test_1_explore_system_prime_messages.ipynb  test_2_naive_prompt.ipynb  test_3_use_best_prompt.ipynb  test_4_explore_best_n_few_shot_prompt.ipynb
results_backup/: results_checksum.txt
scripts/: dataset.py  evaluation.py  executor.py  helpers.py  lmm.py  prompt_helpers.py
scripts/llm/: lmm.py
tables/: baseline-zero-shot-evaluation.tex  optimized-zero-shot-evaluation.tex
